--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hbs": "^4.1.0",
     "jspdf": "^1.5.3",
     "nodemon": "^2.0.2",
+    "pdf-to-printer": "^1.1.2",
     "screenfull": "^5.0.0",
     "sqlite": "^3.0.3",
     "sqlite3": "^4.1.1"
